[FE] Fixed z-indexes.

--- a/frontend/src/app/components/app/app.component.css
+++ b/frontend/src/app/components/app/app.component.css
@@ -31,3 +31,7 @@
 :host /deep/ .nav-link span {
     padding: 0 5px 0 8px;
 }
+
+:host /deep/ .navbar {
+    z-index: 10400;
+}
